# auto_data_report

./: .gitignore  README.md  pyproject.toml
src/etl/: extract.py
