[tool.poetry]
name = "report"
version = "0.1.0"
description = "Relatório de dados automatizado"
authors = ["Pedro de Sá <pedrodesa42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
